--- a/src/app/build-pc/build-pc.component.html
+++ b/src/app/build-pc/build-pc.component.html
@@ -13,7 +13,7 @@
   </div>
   <div class="row" *ngIf="this.allMenu && this.allMenu != '' ">
     <ng-container *ngFor="let item of allMenu; let i= index; ">
-      <div class="col-lg-6 col-sm-6" *ngIf="i < 10" (click)="gotoGrid(item)">
+      <div class="col-lg-6 col-sm-6" *ngIf="i < 10" (click)="redirecUrl( $event,item.urlSlug, '')">
         <div class="">
           <div style="height: 144px;" ngClass="{{'single-categories '+ 'bg'+ i}}">
             <a  ><img
