--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -14,7 +14,7 @@
             <div class="cart-header">
               <div class="title2">THÔNG TIN SẢN PHẨM</div>
              <!-- <div class="actions">
-                <a href="https://www.tncstore.vn/index.php?route=checkout/download/export">
+                <a href="">
                  <svg width="16"
                     height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd"
@@ -28,7 +28,7 @@
                       fill="#005EC4"></path>
                   </svg>
                   Tải báo giá
-                </a> <a href="https://www.tncstore.vn/index.php?route=checkout/print"><svg width="18" height="18"
+                </a> <a href=""><svg width="18" height="18"
                     viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd"
                       d="M3.75 1.5C3.75 1.08579 4.08579 0.75 4.5 0.75H13.5C13.9142 0.75 14.25 1.08579 14.25 1.5V6.75C14.25 7.16421 13.9142 7.5 13.5 7.5C13.0858 7.5 12.75 7.16421 12.75 6.75V2.25H5.25V6.75C5.25 7.16421 4.91421 7.5 4.5 7.5C4.08579 7.5 3.75 7.16421 3.75 6.75V1.5Z"
