--- a/src/app/build-pc/build-pc.component.html
+++ b/src/app/build-pc/build-pc.component.html
@@ -20,7 +20,7 @@
                 [src]="urlImg + item.imageUrl" alt="{{item.categoryName}}"></a>
             <h3 class=""><a><span ngClass="{{'color'+ i}}">{{item.categoryName}}</span></a>
             </h3>
-            <h5 class=""><span filter-content="">{{item.content}}</span>
+            <h5 class="content-build-category"><span filter-content="">{{item.content}}</span>
             </h5>
             <a  class="read-more" ngClass="{{'color'+ i}}">Xem thêm</a>
           </div>
