--- a/src/app/build-pc/build-pc.component.css
+++ b/src/app/build-pc/build-pc.component.css
@@ -198,5 +198,6 @@
         margin: 0 0 0px;
         line-height: 1.25;
         color: #000;
+        font-size: 12px;    margin-bottom: 10px;
     }
   }
