--- a/src/app/product-recent/product-recent.component.css
+++ b/src/app/product-recent/product-recent.component.css
@@ -21,3 +21,97 @@
 .container{
     margin-bottom: 30px;
 }
+
+.product-variation .add-cart-buttons
+{
+    display: block;
+    justify-content: space-between;
+    margin-top: 12px;  flex-direction: row-reverse;
+}
+
+.add-cart-buttons {
+    flex-direction: column-reverse
+}
+
+
+.add-cart-buttons .btn-add-cart {
+    width: 100%;
+    height: 44px;
+    background: #197bb7;;
+    border: none;
+    font-weight: 700;
+    font-size: 16px;
+    color: #fff;
+    margin-top: 15px;
+    text-transform: uppercase
+}
+
+ .add-cart-buttons .btn-add-cart.disable {
+    background-color: #ccc!important
+}
+
+.add-cart-buttons .btn-add-cart.preorder {
+    background: #f9495f!important
+}
+
+.add-cart-buttons .btn-add-cart-2 {
+    background: #fff!important;
+    border: 1px solid #197bb7!important;
+    color: #197bb7!important
+}
+
+.add-cart-buttons .btn-add-cart-2:hover {
+    color: #2872c7!important;
+    background-color: #fff!important;
+    border: 1px solid #fa9f2c!important
+}
+
+.add-cart-buttons .btn-add-cart-2:hover svg path {
+    stroke: #fa9f2c
+}
+.status.status1 {
+    color: #27ae60;
+    padding-right: 3px;
+}
+.status_stock {
+    font-weight: 600;
+    font-size: 13px;
+    display: flex;
+    align-items: center;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+
+.status_stock .status i {
+    font-size: 12px;
+    margin-right: 9px;
+}
+
+.invalid-feedback{
+ color: red;
+}
+
+.background-review{
+    background: seashell;
+}
+
+.product-big-image .percent {
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: #f9495f;
+    color: #fff;
+    font-weight: 700;
+    font-size: 16px;
+    width: 65px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: skew(-12deg);
+    margin-left: -5px
+}
+
+.product-big-image .percent span {
+    transform: skew(12deg)
+}
