--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -33,7 +33,7 @@
         <div class="product-view-area">
           <div class="product-big-image col-xs-12 col-sm-5 col-lg-5 col-sm-5">
             <div class="percent" *ngIf="product?.rateDiscount > 0"><span>-{{product.rateDiscount}}%</span></div>
-            <div class="large-image"> <a [href]="urlImg + imgfirst" class="cloud-zoom" id="zoom1"
+            <div *ngIf="imgfirst" class="large-image"> <a [href]="urlImg + imgfirst" class="cloud-zoom" id="zoom1"
                 rel="useWrapper: false, adjustY:0, adjustX:20"> <img class="zoom-img" [src]="urlImg + imgfirst"
                   alt="products"> </a> </div>
             <div class="slide-images">
