--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -75,9 +75,9 @@
             <ul class="list-links list-unstyled">
               <li>Phone 1: 0978 691 194</li>
               <li>Phone 2: 0908 708 294</li>
-              <li>STK sử dụng giao dịch: </li>
+              <!-- <li>STK sử dụng giao dịch: </li>
               <li>  12456789 – Vietcombank – TEST</li>
-              <li>  123456789 – Techcombank – TEST</li>
+              <li>  123456789 – Techcombank – TEST</li> -->
               <li><a [routerLink]="['/lich-su-mua-hang']">Kiểm tra đơn hàng</a></li>
  
               <!-- <li class="social-network fb"><a title="Connect us on Facebook" target="_blank" href="https://www.facebook.com/dangminhpc70"><i class="fa fa-facebook"></i></a></li> -->
