--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -83,7 +83,7 @@
                       <div class="top-subtotal">Tổng tiền: <span class="price">{{sumPriceItemsInCart() | currency : "VND"}}</span></div>
                       <div class="actions">
                         <!-- <button class="btn-checkout" type="button" [routerLink]="['/thanh-toan']"><i class="fa fa-check"></i><span></span></button> -->
-                        <button class="view-cart" type="button" [routerLink]="['/gio-hang']"><i class="fa fa-shopping-cart"></i><span>Xác nhận đơn hàng</span></button>
+                        <button class="view-cart" type="button" [routerLink]="['/gio-hang']"><i class="fa fa-shopping-cart"></i><span>Xem đơn hàng</span></button>
                       </div>
                     </div>
                   </div>
