--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -20,7 +20,7 @@
             <b>Yêu cầu của bạn không tìm thấy!</b> <em>Xin lỗi vì sự bất tiện này.</em>
             <p>Thử tìm kiếm trang hoặc sản phẩm khác nhé!</p>
             <br />
-            <a routerLink="[/]" class="button-back"><i class="icon-arrow-left-circle icons"></i>&nbsp; Trang chủ</a>
+            <a  [routerLink]="['/']"  class="button-back"><i class="icon-arrow-left-circle icons"></i>&nbsp; Trang chủ</a>
         </div>
         <!-- end error page notfound -->
     </div>
