--- a/src/app/product-recent/product-recent.component.html
+++ b/src/app/product-recent/product-recent.component.html
@@ -7,7 +7,7 @@
           class="product__link"><img [src]='urlImg + item.imageUrl' alt="{{item.productName}}"></a>
         <div class="pr-button-info-area">
             <div class="add-to-wish" style="margin-bottom: 14px;" (click)="addToFavorite(item)"> <a> <i class="fa fa-heart-o"></i> </a> </div>
-            <div class="view-quick-view" (click)="getProductbyProductNameSlug(item.productNameSlug)"> <a data-toggle="modal" data-target="#exampleModalCenter"> <i class="fa fa-search"></i> </a> </div>
+            <div class="view-quick-view" (click)="openModalQuickView(item)"> <a data-toggle="modal" data-target="#exampleModalCenter"> <i class="fa fa-search"></i> </a> </div>
         </div>
       </div>
       <div class="product__bottom">
