--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -53,13 +53,12 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6 col-md-4 col-xs-12">
-          <div class="fb-page" data-href="https://www.facebook.com/dangminhpc70" data-tabs="timeline" data-width="350"
+          <div class="fb-page" data-href="https://www.facebook.com/dangminhpc70/?ref=embed_page" data-tabs="timeline" data-width="350"
             data-height="130" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false"
             data-show-facepile="true">
-            <blockquote cite="https://www.facebook.com/dangminhpc70" class="fb-xfbml-parse-ignore"><a
-                href="https://www.facebook.com/dangminhpc70">Đăng Minh Computer</a></blockquote>
-          </div>
-          <!-- <div class="footer-logo logoImg"><a href="index.html"><img [src]="urlLogo" alt="fotter logo"></a> </div> -->
+            <blockquote cite="https://www.facebook.com/dangminhpc70/?ref=embed_page" class="fb-xfbml-parse-ignore"><a
+                href="https://www.facebook.com/dangminhpc70/?ref=embed_page">Đăng Minh Computer</a></blockquote>
+          </div><!-- <div class="footer-logo logoImg"><a href="index.html"><img [src]="urlLogo" alt="fotter logo"></a> </div> -->
           <!-- <google-map height="220px" width="400px" [center]="center" [zoom]="zoom">
             <map-marker #marker="mapMarker"
             *ngFor="let markerPosition of markerPositions"
