--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -53,6 +53,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6 col-md-4 col-xs-12">
+          <h3 class="links-title">Theo dõi qua Fanpage<a class="expander visible-xs" href="#TabBlock-1">+</a></h3>
           <div class="fb-page" data-href="https://www.facebook.com/dangminhpc70/?ref=embed_page" data-tabs="timeline" data-width="350"
             data-height="130" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false"
             data-show-facepile="true">
@@ -89,12 +90,14 @@
         </div>
         <div class="col-sm-6 col-md-2 col-xs-12 collapsed-block">
           <div class="footer-links">
-            <h3 class="links-title">Danh mục sản phẩm<a class="expander visible-xs" href="#TabBlock-1">+</a></h3>
+            <h3 class="links-title">Địa chỉ cửa hàng<a class="expander visible-xs" href="#TabBlock-1">+</a></h3>
             <div class="tabBlock" id="TabBlock-1">
               <ul class="list-links list-unstyled">
-                <div *ngFor="let item of this.categories; let i = index">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d3912.401492106363!2d106.13390137583933!3d11.305336888877388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x310b6a60935060fd%3A0xe261d01a689650d7!2zMjkgQ8OhY2ggTeG6oW5nIFRow6FuZyA4LCBOaW5oIFRo4bqhbmgsIEhvw6AgVGjDoG5oLCBUw6J5IE5pbmgsIFZp4buHdCBOYW0!3m2!1d11.3053369!2d106.1364763!5e0!3m2!1svi!2s!4v1694618267100!5m2!1svi!2s" 
+                width="350" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <!-- <div *ngFor="let item of this.categories; let i = index">
                   <li *ngIf="i <= 8"><a [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{slug: item?.urlSlug}">{{item.categoryName}}</a></li>
-                </div>
+                </div> -->
               </ul>
             </div>
           </div>
@@ -113,12 +116,12 @@
         </div> -->
         <div class="col-sm-3 col-md-2 col-xs-12 collapsed-block">
           <div class="footer-links">
-            <h3 class="links-title">Thông tin<a class="expander visible-xs" href="#TabBlock-4">+</a></h3>
+            <!-- <h3 class="links-title">Thông tin<a class="expander visible-xs" href="#TabBlock-4">+</a></h3> -->
             <div class="tabBlock" id="TabBlock-4">
               <ul class="list-links list-unstyled">
-                <li><a  [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{typeStatus: 2}">Sản phẩm bán chạy</a></li>
+                <!-- <li><a  [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{typeStatus: 2}">Sản phẩm bán chạy</a></li>
                 <li><a  [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{typeStatus: 1}">Sản phẩm giảm giá</a></li>
-                <li><a href="#">Hàng cũ - giá tốt</a></li>
+                <li><a href="#">Hàng cũ - giá tốt</a></li> -->
 
                
               </ul>
